# superagents

./: .gitignore  README.md  libs-cli-CLAUDE.md
docs/superpowers/plans/: 2026-03-17-phase1-telemetry-skeleton.md  2026-03-18-phase4-architect-developer.md  2026-03-19-phase5-qa-persona.md  2026-03-19-phase6-executable-plan-format.md  2026-03-19-phase7-pipeline-orchestrator.md  2026-03-19-phase8-standalone-cli.md  2026-03-24-brainstorm-prompt-caching.md  2026-03-24-idea-memory.md
docs/superpowers/specs/: 2026-03-17-fork-cleanup-design.md  2026-03-17-phase1-telemetry-skeleton-design.md  2026-03-18-phase4-architect-developer-design.md  2026-03-19-phase5-qa-persona-design.md  2026-03-19-phase6-executable-plan-format-design.md  2026-03-19-phase7-pipeline-orchestrator-design.md  2026-03-24-confidence-echo-first-design.md  2026-03-24-idea-memory-design.md
libs/sdlc/: CLAUDE.md  pyproject.toml
libs/sdlc/src/superagents_sdlc/: __init__.py  cli.py  cli_format.py  cli_spinner.py  manifest.py
libs/sdlc/src/superagents_sdlc/brainstorm/: __init__.py  confidence.py  graph.py  idea_memory.py  narrative.py  nodes.py  prompts.py  sidekick.py  state.py
libs/sdlc/src/superagents_sdlc/handoffs/: __init__.py  contract.py  registry.py  transport.py
libs/sdlc/src/superagents_sdlc/personas/: __init__.py  architect.py  base.py  developer.py  product_manager.py  qa.py
libs/sdlc/src/superagents_sdlc/policy/: __init__.py  config.py  engine.py  gates.py
libs/sdlc/src/superagents_sdlc/skills/: __init__.py  base.py  json_utils.py  llm.py
libs/sdlc/src/superagents_sdlc/skills/engineering/: __init__.py  code_planner.py  implementation_planner.py  plan_parser.py  tech_spec_writer.py
libs/sdlc/src/superagents_sdlc/skills/pm/: __init__.py  prd_generator.py  prioritization_engine.py  user_story_writer.py
libs/sdlc/src/superagents_sdlc/skills/qa/: __init__.py  findings_router.py  spec_compliance_checker.py  validation_report_generator.py
libs/sdlc/src/superagents_sdlc/workflows/: __init__.py  narrative.py  orchestrator.py  result.py
libs/sdlc/superagents-output/browser_based_ui_for_superagents_view_brainstorm_progress_review_artifacts_and_participate_in_decision_gates/sections/: problem_statement_goals.md
libs/sdlc/superagents-output/test/: .superagents.json
libs/sdlc/tests/: conftest.py
libs/sdlc/tests/unit_tests/: test_cli.py  test_cli_format.py  test_cli_spinner.py  test_manifest.py
libs/sdlc/tests/unit_tests/test_brainstorm/: test_cli_brainstorm.py  test_confidence.py  test_graph.py  test_idea_memory.py  test_narrative.py  test_nodes.py  test_sidekick.py
libs/sdlc/tests/unit_tests/test_handoffs/: test_contract.py  test_registry.py  test_transport.py
libs/sdlc/tests/unit_tests/test_personas/: test_architect.py  test_base_persona.py  test_developer.py  test_pipeline.py  test_product_manager.py  test_product_manager_workflow.py  test_qa.py  test_qa_persona.py
libs/sdlc/tests/unit_tests/test_policy/: test_config.py  test_engine.py  test_gates.py
libs/sdlc/tests/unit_tests/test_skills/: test_base_skill.py  test_json_utils.py  test_llm.py
libs/sdlc/tests/unit_tests/test_skills/test_engineering/: test_code_planner.py  test_implementation_planner.py  test_plan_parser.py  test_tech_spec_writer.py
libs/sdlc/tests/unit_tests/test_skills/test_pm/: test_prd_generator.py  test_prioritization_engine.py  test_user_story_writer.py
libs/sdlc/tests/unit_tests/test_skills/test_qa/: test_findings_router.py  test_spec_compliance_checker.py  test_validation_report_generator.py
libs/sdlc/tests/unit_tests/test_workflows/: test_narrative.py  test_orchestrator.py  test_result.py
libs/superagents/: Makefile  pyproject.toml
libs/superagents/superagents/: __init__.py
libs/superagents/superagents/telemetry/: __init__.py  provider.py  spans.py
libs/superagents/tests/unit_tests/test_telemetry/: conftest.py  test_provider.py  test_spans.py
