[project]
name = "superagents"
version = "0.1.0"
description = "Agentic SDLC framework combining BMAD personas, Superpowers TDD, Deep Agents SDK, A2A Protocol, and OpenTelemetry"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["agents", "ai", "sdlc", "llm", "opentelemetry", "a2a", "tdd"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "deepagents>=0.5.0",
    "a2a-sdk>=0.3.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "pydantic>=2.0",
]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "pytest-watcher>=0.3.4,<1.0.0",
    "pytest-socket>=0.7.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1,<1.0.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["superagents*"]

[tool.uv.sources]
deepagents = { path = "../deepagents", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",  # Trailing comma — conflicts with formatter
    "ISC001",  # Implicit string concat — conflicts with formatter
    "FIX002",  # Line contains TODO
    "TD002",   # Missing author in TODO
    "TD003",   # Missing issue link in TODO
]

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-var-parameters = true

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true
known-first-party = ["superagents"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ANN001",  # Missing type annotation for function argument
    "ANN201",  # Missing return type annotation for public function
    "ANN202",  # Missing return type annotation for private function
    "D1",      # Missing docstrings
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of `assert`
    "S",       # Security warnings
    "SLF",     # Private member access
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.12"
extra-paths = ["../deepagents"]

[tool.ty.rules]
division-by-zero = "error"
